good refs; intro revisited; minor tweaks

--- a/main.tex
+++ b/main.tex
@@ -109,21 +109,19 @@ Looming is one of the most salient visual stimuli an animal may encounter, yet m
 
 Few sensory stimuli are as ill boding for an animal as visual looming. A retinal projection that is small at first, but is quickly growing in size, may promise a painful collision, or a meeting with a predator, and so it inherently calls for an action: an avoidance maneuver, freezing, or defensive posturing, such as a blink. Moreover, to be meaningful, looming detection has to be fast. Not surprisingly, it is described in virtually every type of animals that uses vision, from insects to primates \citep{Pereira2016}.
 
-In different animals, looming detection seems to rely on a variety of network solutions \citep{frost2004review}, including dimming detectors in the retina \citep{ishikane2005,munch2009}, opponent motion detection \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation,fotowat2011multiplexing}. Even within a single clade of anuran amphibians (frogs), animals seem to employ at least two competing looming detection mechanisms: non-linear detection of retinal oscillations \citep{baranauskas2012}, and rebound of recurrent activity \citep{khakhalin2014,jang2016}. Moreover, it seems that some of these competing mechanisms may lead to different motor responses, as described in insects \citep{card2008tradeoffs,chan2013avoidance}, fish \citep{burgess2007twoescapes,portugues2009behaviors,budick2000repertoire,temizer2015pathway,bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
+In different animals, looming detection seems to rely on a variety of network solutions \citep{frost2004review} that include dimming detectors in the retina \citep{ishikane2005,munch2009}, opponent motion detection \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation,fotowat2011multiplexing}. Even within a single clade of anuran amphibians (frogs), animals seem to employ at least two competing looming detection mechanisms: non-linear detection of retinal oscillations \citep{baranauskas2012}, and rebound of recurrent activity \citep{khakhalin2014,jang2016}. Moreover, it seems that competing mechanisms may lead to different motor responses, as described in insects \citep{card2008tradeoffs,chan2013avoidance}, fish \citep{burgess2007twoescapes,portugues2009behaviors,budick2000repertoire,temizer2015pathway,bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
 
-It may seem puzzling that a brain would use several unrelated approaches to solve one practical problem, but this arrangement may make sense developmentally. Simple, crude ways of classifying sensory stimuli can be used to train more sophisticated and efficient networks, capable of nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. For looming stimuli in tadpoles, early in development, when collision detection is still poor \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina \citep{baranauskas2012} both to detect collisions, and to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, tectal networks can serve as a first line of defense, identifying early phases of looming, and helping motor neurons in the hindbrain to perform fine course correction \citep{khakhalin2014,bhattacharyya2017assessment}, while dimming detectors could remain as a backup, mediating more urgent and less coordinated responses \citep{khakhalin2014}. Moreover, every time collision avoidance is not performed perfectly, sensorimotor networks can be refined, based on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016, helmbrecht2018topography}.
+It may seem puzzling that a brain would use several unrelated approaches to solve one practical problem, but this arrangement may make sense developmentally. Simple, crude ways of classifying sensory stimuli can be used to train more sophisticated and efficient networks, capable of nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. For looming stimuli in tadpoles, early in development, when collision detection is still poor \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina \citep{baranauskas2012} both to detect collisions, and to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, tectal networks can serve as a first line of defense, identifying early phases of looming, and helping motor neurons in the hindbrain to perform fine course correction \citep{khakhalin2014,bhattacharyya2017assessment}, while dimming detectors remain as a backup, mediating more urgent and less coordinated responses \citep{khakhalin2014}. Moreover, every time collision avoidance is not performed perfectly, sensorimotor networks can be refined, based on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016, helmbrecht2018topography}.
 
-Traditionally, the golden standard for describing a behavioral mechanism is to demonstrate that neuronal activation is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in systems that are compact and isolated enough, such as acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}. Yet many systems in the brain are distributed and deeply interconnected, making it hard to represent them as a sum of individual "parts", with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. %It is possible to study complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach does not necessarily grant insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same network statistics as a normal brain would not necessarily tell us how to “fix” this network, even if we had a method to rewire neurons in a targeted fashion.
+Traditionally, the golden standard for describing a behavioral mechanism is to demonstrate that a pattern of neuronal activation is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in systems that are compact and isolated, such as acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}. Yet many systems in the brain are distributed and deeply interconnected, making it hard to represent them as a sum of individual "parts", with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. In this case, a more promising approach is to study the development of structured functional connectivity in the brain, as biological neural networks are almost never truly hardwired, but rather dynamically evolve, governed by developmental rules \citep{pietri2017emergence}, in interplay with patterned activation \citep{gao2015simplicity}. This insight is encouraging, as developmental rules act at the level of individual cells and their compartments, such as dendrites and synapses, which implies that while the ultimate product of these rules is exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. It suggests that our best chance to truly “understand” the brain may lie in identifying the space of rules that lead to the development of functional networks \citep{linderman2017constrain}. This general approach proved to be fruitful in recent years, as several complex network phenomena, including high-order receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules. 
 
-A more promising approach is to study the origins of structured functional connectivity in the brain. Biological neural networks are almost never truly hardwired, but rather dynamically evolve, governed by developmental rules \citep{pietri2017emergence}, and in interplay with patterned activation that propagates through them \citep{gao2015simplicity}. This insight is encouraging, as developmental rules in the brain act at the level of individual cells and their compartments, such as dendrites and synapses, which implies that while the ultimate product of these rules is exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. It suggests that our best chance to truly “understand” the brain may lie in identifying the space of rules that lead to the development of functional networks \citep{linderman2017constrain}. This general approach proved to be fruitful in recent years, as several complex network phenomena, including high-order receptive fields \citep{bashivan2018neural}, grid cells \citep{banino2018grid}, and decision circuits \citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules. 
+In this paper, we look at connectomic correlates of looming selectivity in the developing optic tectum of \textit{Xenopus} tadpoles. As a model, tadpole tectum is uniquely suitable for studies of sensory integration, as its neurons are excessively plastic \citep{pratt2007intrinsic,busch2019}, strongly interconnected \citep{james2015}, and develop reliable looming selectivity within about a week of development, as tadpoles mature from developmental stage 46 to stage 49 \citep{dong2009,khakhalin2014}. At early developmental stages, the refinement of tectal connectivity is dominated by spike-time-dependent plasticity (STDP; \citealt{zhang1998stdp,mu2006stdp,vislay2006rf,richards2010stdp}). From studies in other models, we know that STDP favors the development of so called synfire chains \citep{fiete2010chains,zheng2014synfire}: groups of neurons linked to each other with sequential synaptic connections. Synfire chains tend to be selectively responsive to activation patterns that arrive at the same sequence in which neurons are connected, turning them into temporal pattern detectors \citep{clopath2010stdpcoding}. As neurons in tadpole tectum spike relatively slowly, with broad spikes and long refractory periods \citep{ciarleglio2015,jang2016,busch2019}, synfire chains can be expected to have transmission delays from one neuron to another of up to 10 ms, compared to $\sim$2 ms in a mammalian cortex. This slower signal propagation brings connections within the tectum to the threshold of direct detection by fast calcium imaging techniques that operate at rates of $\sim$100 frames/s, allowing observations of not just co-firing of neurons within each ensemble or clique \citep{reimann2017,avitan2017spontaneous}, but propagation of signal within these ensembles.
 
-In this paper, we look at connectomic correlates of looming selectivity in the developing optic tectum of \textit{Xenopus} tadpoles. As a model, tadpole tectum is uniquely suitable for studies of sensory integration, as its neurons are excessively plastic \citep{pratt2007intrinsic,busch2019}, strongly interconnected \citep{james2015}, and develop reliable looming selectivity within about a week of development, as tadpoles mature from developmental stage 46 to stage 49 \citep{dong2009,khakhalin2014}. The refinement of tectal connectivity is dominated by spike-time-dependent plasticity (STDP; \citealt{zhang1998stdp,mu2006stdp}), which is known to favor development of synfire chains \citep{fiete2010chains,zheng2014synfire}: groups of neurons linked with sequential connections that selectively respond to certain patterns of temporal activation \citep{clopath2010stdpcoding}. As  tectal neurons spike relatively slowly, with broad spikes and long refractory periods \citep{ciarleglio2015,jang2016,busch2019}, these synfire chains can be expected to have delays of about 10 ms from one neuron to another, compared to $\sim$2 ms in the mammalian cortex. This slower signal propagation brings connections within the tectum to the threshold of direct detection by fast Ca imaging techniques that operate at rates of ~100 frames/s, allowing observations of not just co-firing of neurons within each ensemble or clique \citep{reimann2017,avitan2017spontaneous}, but propagation of signal through these ensembles.
-
-Here we use high-speed Ca imaging data to infer connectivity of small sub-networks within the tectum, describe connectivity patterns in younger and older tadpoles, and compare them to predictions from a simple developmental simulation. We hypothesize that by comparing statistical properties of networks generated by a family of models to networks reconstructed in imaging experiments we should be able to reverse-engineer developmental rules that govern development of looming-sensitive networks in the tectum. We show that our model predicted some, but not all aspects of topology and functionality in looming-sensitive networks, making it hard to draw simple conclusions. Nevertheless, we report several new findings, including some surprising negative results, and as a proof of concept, demonstrate that looming detectors can emerge in developing networks through a simple interplay of structured inputs and plasticity.
+Here we use high-speed calcium imaging data to infer connectivity of small sub-networks within the tectum. We describe connectivity patterns in younger and older tadpoles, and compare them to predictions from a simulation in a simple developmental model. We hypothesize that by comparing statistical properties of networks generated by a family of models to networks reconstructed in imaging experiments we should be able to reverse-engineer developmental rules that govern development of looming-sensitive networks in the tectum. We show that our model predicted some, but not all aspects of topology and functionality in looming-sensitive networks, making it hard to draw simple conclusions. Nevertheless, we report several new findings, including some surprising negative results, and as a proof of concept, demonstrate that looming detectors can emerge in developing networks through a simple interplay of structured inputs and plasticity.
 
 \section*{Results}
 
-For all mathematical methods, we provide their names and their interpretation in the main text, but leave definitions and details for the extended Methods section. For statistical analyses, we report p-values without correction, and interpret them according to Fisher, rather than Neyman-Pearson philosophy \citep{greenland2016}. This approach is preferable, as many of our analyses are not fully independent, but ask different questions, and rely on differently formulated null hypotheses. At the interpretation step, we pay more attention to hypotheses supported by several alternative analyses. All code for this paper is available at \url{https://github.com/khakhalin/Ca-Imaging-and-Model-2018}.
+For all mathematical methods, we provide their names and interpretation in the main text, but leave definitions and details for the extended Methods section. For statistical analyses, we report p-values without correction, and interpret them according to Fisher, rather than Neyman-Pearson philosophy \citep{greenland2016}. This approach is preferable, as many of our analyses are not fully independent, but ask different questions, and rely on differently formulated null hypotheses. At the interpretation step, we pay more attention to hypotheses supported by several alternative analyses. All code for this paper is available at \url{https://github.com/khakhalin/Ca-Imaging-and-Model-2018}.
 
 % Todo: once we know where the data is hosted, update
 
@@ -193,9 +191,9 @@ We interpreted transfer entropy values as approximations of weights in a connect
 
 The simplest statistical property of a probabilistic network is its \textbf{degree distribution}: the share of nodes with different number of incoming ($k_{in}$) and outgoing ($k_{out}$) connections. We compared rounded degree distributions (see Methods) between networks detected in younger and older tadpoles (Fig. 4B), and found that more developed networks contained fewer unconnected cells ($k_{in}$=0, $p_t<$0.03) and fewer cells with high number of connections ($k_{in}$=5, $k_{out}$=6, $p_t$=0.01 in both cases), but more cells with intermediate number of connections ($k_{in}$=2, $p_t$=0.001, and $k_{out}$=2, $p_t$=0.04). When we approximated degree distributions (excluding $k$=0) with a power law (Fig. 4C), the power constant $\gamma$ was smaller in younger (1.48$\pm$0.19) than in older tadpoles (1.82$\pm$0.25, $p_t$=2e-4), consistent with a sharper, steeper drop from the rate of occurrence of weakly connected to that of highly connected cells. It suggests (Fig. 4D) that older tectal networks had more chains of connected neurons (degree $k$=1) and forks ($k$=2), while younger neurons had more hyperconnected hubs ($k>$5) and unconnected nodes ($k_{in}$=0), which matches the expectation for STDP-driven networks \citep{fiete2010chains}.
 
-An unusual feature of our calcium imaging protocol, compared to most calcium imaging techniques, was that the signal-to-noise ratio varied greatly from one cell to another, depending on how far it was from the focal plane, and how much dye it absorbed while partially exposed to chamber solution during staining. As a result, the share of cells with weak signals, that appeared unconnected to the rest of the network due to low pairwise transfer entropy, varied across experiments, and was dependent on extraneous parameters, such as the physical curvature of the preparation. To ensure that poorly resolved cells do not bias our analysis too strongly, we restricted further network analysis to the largest weakly connected component of each network. There was no difference in the number of weakly connected components detected in younger and older tadpoles (50$\pm$14 and 50$\pm$26 for stages 45 and 49 respectively, $N$=14 and 16; $p_t$=0.9), but in older animals the largest weakly connected component included a higher share of observed cells (50$\pm$6\% and 64$\pm$12\% for younger and older networks respectively; $p_t$=4e-4), matching the change in degree distributions described above.
+An unusual feature of our calcium imaging protocol, compared to most calcium imaging techniques, was that the signal-to-noise ratio varied greatly from one cell to another, depending on how far it was from the focal plane, and how much dye it absorbed as it was partially exposed to chamber solution during staining. As a result, the share of cells with weak signals, that appeared unconnected to the rest of the network due to low pairwise transfer entropy, varied across experiments, and was dependent on extraneous parameters, such as the physical curvature of the preparation. To ensure that poorly resolved cells do not bias our analysis too strongly, we restricted further network analysis to the largest weakly connected component of each network. There was no difference in the number of weakly connected components detected in younger and older tadpoles (50$\pm$14 and 50$\pm$26 for stages 45 and 49 respectively, $N$=14 and 16; $p_t$=0.9), but in older animals the largest weakly connected component included a higher share of observed cells (50$\pm$6\% and 64$\pm$12\% for younger and older networks respectively; $p_t$=4e-4), matching the change in degree distributions described above.
 
-Another known theoretical prediction for networks dominated by STDP \citep{mu2006stdp,pratt2008recurrent} is that with time neuronal connections would become highly asymmetric. Indeed, if cells $i$ and $j$ are reciprocally connected, every time $j$ spikes after $i$, STDP would increase the weight $w_{ij}$ , but decrease $w_{ji}$ \citep{abbott1996ltpsequence,fiete2010chains}. We found that in our data, \textbf{the share of bidirectional edges} (with both $w_{ij}$ and $w_{ji}>$0) among all detected edges was smaller (0.3$\pm$0.3\%) than expected for random edge assignment in graphs of our size (0.4$\pm$0.1\%, paired $p_t$=0.02), indicating asymmetric information flow in the tectum. Moreover, the share of bidirectional edges decreased in development, from 0.4$\pm$0.3\% in younger animals to 0.2$\pm$0.2\% in older animals ($p_t$=0.03), suggesting that in tadpoles, STDP is shaping emerging network topology at these developmental stages.
+Another known theoretical prediction for networks dominated by STDP \citep{pratt2008recurrent,richards2010stdp} is that with time neuronal connections would become highly asymmetric. Indeed, if cells $i$ and $j$ are reciprocally connected, every time $j$ spikes after $i$, STDP would increase the weight $w_{ij}$ , but decrease $w_{ji}$ \citep{abbott1996ltpsequence,fiete2010chains}. We found that in our data, \textbf{the share of bidirectional edges} (with both $w_{ij}$ and $w_{ji}>$0) among all detected edges was smaller (0.3$\pm$0.3\%) than expected for random edge assignment in graphs of our size (0.4$\pm$0.1\%, paired $p_t$=0.02), indicating asymmetric information flow in the tectum. Moreover, the share of bidirectional edges decreased in development, from 0.4$\pm$0.3\% in younger animals to 0.2$\pm$0.2\% in older animals ($p_t$=0.03), suggesting that in tadpoles, STDP is shaping emerging network topology at these developmental stages.
 
 We then looked at whether connected cells were more likely to be located spatially closer to each other. We found that the \textbf{average distance between connected cells} was indeed shorter than the average distance on a randomized graph: 18$\pm$10\% shorter for stage 45, and 17$\pm$8\% shorter for stage 49 tadpoles (individually significant with $p_t<$0.05 for 13/14 and 16/16 experiments respectively). Contrary to our expectations, and in contrast to what is known about visual inputs to the tectum \citep{tao2005refinement}, the intra-tectal connectivity did not become more compact in development ($p_t$=0.7). This may suggest that tectal networks rely on far-reaching recurrent connections to integrate visual information across the visual field \citep{baginskas2009recurrent,liu2016jumbo,jang2016}.
 
@@ -313,15 +311,15 @@ In the second part of this paper, we hypothesized that a developing network gove
 
 Our model networks also developed non-random structure, with a scale-free degree distribution, low clustering, and high modularity. Of predictions related to network structure, most were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"): most notably, changes in network degree distribution, a disappearance of bidirectional connections, and statements related to neuronal ensembles. These matches between the model and the experiments suggest that at the very least, our model captured the nature of networks development under the influence of synaptic competition and spike-time-dependent plasticity (STDP). Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, while STDP coordinated activity within sub-networks, increasing modularity \citep{stam2010modular,litwin2014assemblies}, similar to how it was previously described for classic Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous,pietri2017emergence}, but we believe that it is because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
 
-At the same time, most model predictions about how network properties were supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum are known to still be refined at these developmental stages \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even reversed late in development, which means that even for a qualitative comparison between the model and the experiment we have to make a critical assumption about whether developmental stage 46 corresponds to a mid-point of network maturation, or falls on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages may indeed fall on the “plateau”. If true, this would mean that differences in collision avoidance between stage 46 and stage 49 tadpoles \citep{dong2009} may be due to maturation of sensorimotor projections from the tectum to the hindbrain, which we did not assess in this study.
+At the same time, most model predictions about how network properties were supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum are known to still be refined at these developmental stages \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even reversed late in development, which means that even for a qualitative comparison between the model and the experiment we have to make a critical assumption about whether developmental stage 46 corresponds to a mid-point of network maturation, or falls on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, as well as a known difference in STDP between younger (stage 42) and older (stage 48) tadpoles \citep{richards2010stdp,tsui2010developmental}, suggest that both stages included in this study may indeed fall on the “plateau”. If true, this would mean that differences in collision avoidance between stage 46 and stage 49 tadpoles \citep{dong2009} may be due to the maturation of sensorimotor projections from the tectum to the hindbrain, which we did not assess in this study.
 
 Second, a poor fit between model predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for each of two developmental stages, we could only hope to detect large changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network, and 0.01\% of all connections. With a coverage so sparse, our parameter estimations are expected to be noisy, further lowering the power of our tests.
 
 Third, one can question the validity of our connectivity reconstructions, as we did not have a technical opportunity to compare these reconstructions to a "ground truth" connectivity (although see \citealt{xu2011}). The best way to address this concern is to run a set of control experiment, analyzing transfer entropy between pairs of cells proven to be either connected or disconnected, to estimate the power of graph reconstruction from Ca imaging recordings. Unfortunately, these experiments are currently beyond our technical ability, so we have to rely on indirect criteria for successful network reconstruction. Two most important observations that support the validity of our results are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks, compared to rewired networks. Also, we were comforted by a good replication of tectal response shapes (compared to \citealt{khakhalin2014}), a good internal replication of edge detection between stimuli types (see Methods), and an observation of retinotopy during responses to looming stimuli.
 
-Finally, the fourth way to explain a relatively poor fit between the model and the imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are different from that in the model. In the model, looming selectivity was largely mediated by synfire chains \citep{zheng2014synfire,cohen2002synreview} that were guided by structured sensory activation \citep{clopath2010stdpcoding}, and thus encoded a typical activation pattern in response to looming stimuli. Later, when looming stimuli were presented to a model, they "resonated" with matching synfire chains, causing stronger network activation. It may be that in a biological tectum, enhanced responses to looming stimuli are due to either delayed recurrent integration \citep{khakhalin2014,jang2016}, dynamic inactivation \citep{fotowat2011multiplexing}, or some other effects \citep{baginskas2009recurrent}. Two most concerning discrepancies between the model and the experiments are  the position of selective cells within the network (central in tadpoles, peripheral in the model), and the difference in centrality measurements related to local signal integration (high in-degree and Katz rank in biological experiments, but no similar effect in the model). At the same time, the difference in selective cell position may be due to spatial organization of a biological brain that was not captured by the model, while the difference in Katz centrality may be explained by exaggerated synaptic competition in the model. Indeed, in the model we forced every neuron to have outputs \textit{within} the network, which led to the development of cycles, while in the real tectum highly selective cells may lack local intratectal outputs, projecting only to other brain regions. This hypothesis is indirectly supported by high Katz centrality of looming-selective cells in a model without synaptic competition.
+Finally, the fourth way to explain a relatively poor fit between our model and imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are different from that in the model. In the model, looming selectivity was largely mediated by synfire chains \citep{zheng2014synfire,cohen2002synreview} that were guided by structured sensory activation \citep{vislay2006rf,clopath2010stdpcoding}, and thus encoded activation patterns typical for looming stimuli \citep{pratt2008recurrent,richards2010stdp}. Later, when looming stimuli were presented to a model, they "resonated" with matching synfire chains, causing stronger network response. It may be that in the biological tectum, enhanced responses to looming stimuli are due to either delayed recurrent integration \citep{khakhalin2014,jang2016}, dynamic inactivation of neurons \citep{fotowat2011multiplexing}, or some other non-linear effects \citep{baginskas2009recurrent}. Two most concerning discrepancies between the model and the experiments are  the position of selective cells within the network (central in tadpoles, peripheral in the model), and the difference in centrality measurements related to local signal integration (high in-degree and Katz rank in biological experiments, but no similar effect in the model). At the same time, the difference in the position of looming-selective cells may be due to explicit spatial organization of output layers in biological tecta that was not included in the model, while the difference in Katz centrality may be explained by exaggerated synaptic competition in our model. Indeed, in the model we forced every neuron to have outputs \textit{within} the tectal network, which led to the development of cycles, while in the real tectum highly selective cells may lack local intratectal outputs, projecting only to other brain regions. This hypothesis is indirectly supported by high Katz centrality of looming-selective cells in a model without synaptic competition (Figure 8N,O).
 
-Despite an incomplete match with the data, our model yielded interesting general predictions. The sensitivity analysis showed that of all modeling assumptions, two most important ones were the presence of fast intrinsic plasticity, and exposure to pattern visual stimulation. The model converged to a state suitable for looming detection even if either STDP or synaptic competition were disrupted, but it failed if intrinsic plasticity was kept slow compared to synaptic plasticity, or if sensory inputs were kept random. Moreover, it was not critical for the model to be specifically trained on looming stimuli: it performed almost as well with a mix of oblique looming, receding, and translating stimuli, suggesting that it is stimulus locality and edge continuity that mattered the most. This suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. Our model also predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but seems to contradict experimental observations in Zebrafish \citep{pietri2017emergence}.
+Despite an incomplete match with the data, our model yielded interesting general predictions. The sensitivity analysis showed that of all modeling assumptions, two most important ones were the presence of fast intrinsic plasticity, and exposure to pattern visual stimulation. The model converged to a state suitable for looming detection even if either STDP or synaptic competition were disrupted, but it failed if intrinsic plasticity was slow compared to synaptic plasticity, or if sensory inputs were kept random. Moreover, it was not critical for the model to be specifically trained on looming stimuli: it performed almost as well with a mix of oblique looming, receding, and translating stimuli, suggesting that it is stimulus locality and edge continuity that mattered the most. This suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. Our model also predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but seems to contradict experimental observations in Zebrafish \citep{pietri2017emergence}.
 
 At the same time, to arrange a subset of tectal outputs to a functional looming detector, as we did while estimating the level of stimulus encoding (Figure 8E), a developing brain would need access to a learning signal. We propose that in aquatic vertebrates this learning signal may come from both dimming receptors in the retina \citep{baranauskas2012}, and lateral line receptors in the body \citep{truszkowski2017}. These inputs would trigger plasticity of tectal outputs to the reticulospinal neurons in the hindbrain, selecting a subset of inputs that are most active immediately before a collision. Moreover, during random encounters with spatial objects, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each individual collision, theoretically allowing the animal to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons \citep{helmbrecht2018topography}. Therefore, this type of learning could lead to the development of spatially nuanced escape responses to optimize avoidance behaviors, as described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}.
 
