--- a/refs.bib
+++ b/refs.bib
@@ -305,6 +305,17 @@
   publisher={APS}
 }
 
+@article{vislay2006rf,
+  title={Spatiotemporal specificity of neuronal activity directs the modification of receptive fields in the developing retinotectal system},
+  author={Vislay-Meltzer, Rebecca L and Kampff, Adam R and Engert, Florian},
+  journal={Neuron},
+  volume={50},
+  number={1},
+  pages={101--114},
+  year={2006},
+  publisher={Elsevier}
+}
+
 @article{aizenman2007,
   title={Enhanced visual activity in vivo forms nascent synapses in the developing retinotectal projection},
   author={Aizenman, Carlos D and Cline, Hollis T},
@@ -612,12 +623,12 @@
   publisher={American Physiological Society Bethesda, MD}
 }
 
-@article{stam2010modular,
-  title={Emergence of modular structure in a large-scale brain network with interactions between dynamics and connectivity},
-  author={Stam, Cornelis Jan and Hillebrand, Arjan and Wang, Huijuan and Van Mieghem, Piet},
-  journal={Frontiers in computational neuroscience},
-  volume={4},
-  pages={133},
+@article{richards2010stdp,
+  title={In vivo spike-timing-dependent plasticity in the optic tectum of Xenopus laevis},
+  author={Richards, Blake A and Aizenman, Carlos D and Akerman, Colin J},
+  journal={Frontiers in synaptic neuroscience},
+  volume={2},
+  pages={7},
   year={2010},
   publisher={Frontiers}
 }
@@ -641,6 +652,26 @@
   pages={1059--1069},
   year={2010},
   publisher={Elsevier}
+}
+
+@article{stam2010modular,
+  title={Emergence of modular structure in a large-scale brain network with interactions between dynamics and connectivity},
+  author={Stam, Cornelis Jan and Hillebrand, Arjan and Wang, Huijuan and Van Mieghem, Piet},
+  journal={Frontiers in computational neuroscience},
+  volume={4},
+  pages={133},
+  year={2010},
+  publisher={Frontiers}
+}
+
+@article{tsui2010developmental,
+  title={A developmental sensitive period for spike timing-dependent plasticity in the retinotectal projection},
+  author={Tsui, Jennifer and Schwartz, Neil and Ruthazer, Edward S},
+  journal={Frontiers in synaptic neuroscience},
+  volume={2},
+  pages={13},
+  year={2010},
+  publisher={Frontiers}
 }
 
 @article{vogelstein2010oopsi,
